End of section 6

--- a/datingApp-SPA/angular.json
+++ b/datingApp-SPA/angular.json
@@ -24,9 +24,12 @@
             ],
             "styles": [
               
-              "src/styles.css"
+              "src/styles.css",
+
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
+            ]
           },
           "configurations": {
             "production": {
